# woitasen

./: .gitignore  Makefile  README.md  README.me  backend-s3.tf  main.tf  providers.tf  pyproject.toml
modules/: tf-backend.tf
modules/backend_s3/: main.tf
modules/ecs/: data.tf  iam.tf  main.tf  outputs.tf  sg.tf  variables.tf
modules/monitoring/: main.tf  outputs.tf  variables.tf
modules/vpc/: main.tf  outputs.tf  variables.tf
